--- a/site.yml
+++ b/site.yml
@@ -2,9 +2,10 @@
 #start the webserver installation
 - name: install httpd server
   hosts: all
+  remote_user: ec2-user
   become: yes
   become_method: sudo
   
   roles:
-    - install&conf_webserver
+    - install Webserver
     - testcases
